--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: rgb(74, 74, 105);">
 
 <h1 class="text-center">{{title}}</h1>
-<div class="text-center text-opacity-75" style="font-size: 0.75rem; color:bisque">Aplciación de prueba full stack, en la que compruebo como conectarme a mi propia base de datos en MySQL Srping-Boot, mantenida en Linux en Amazon Web Services</div>
+<div class="text-center text-opacity-75" style="font-size: 0.75rem; color:bisque">Aplicación de prueba "CRUD" full stack, en la que resuelvo conectarme a mi propio servicio REST creado con Srping-Boot y b.d. en MySQL, mantenido en Linux en Amazon Web Services</div>
 <div class="container" style="color: rgb(223, 217, 217);">
   <!-- text-white -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark"> 
