--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div style="background-color: rgb(74, 74, 105);">
 
 <h1 class="text-center">{{title}}</h1>
-<div class="text-center text-opacity-75" style="font-size: 0.75rem; color:rgb(255, 221, 196)">Aplicación de prueba "CRUD" full stack, en la que resuelvo conectarme a mi propio servicio REST creado con Srping-Boot y b.d. en MySQL, mantenido en Linux en Amazon Web Services</div>
+
+<div class="text-center text-opacity-75" style="font-size: 0.75rem; color:rgb(255, 221, 196)">
+  Aplicación de prueba <span style="color:coral">"CRUD" full stack</span>, en la que resuelvo conectarme a mi propio servicio <span style="color:coral">REST</span> creado con <span style="color:coral">Spring-Boot</span> y B.D. en <span style="color:coral">MySQL</span>, mantenido en Linux en <span style="color:coral">Amazon Web Services</span>
+</div>
 <div class="container" style="color: rgb(223, 217, 217);">
   <!-- text-white -->
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark"> 
@@ -23,4 +26,3 @@
   <!-- <app-lista-empleados></app-lista-empleados> -->
 </div>
 
-</div>
